--- a/app/src/main/res/drawable/ic_baseline_bar_chart_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_bar_chart_24.xml
@@ -1,2 +1,3 @@
 <vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="2
