--- a/app/src/main/res/drawable/ic_baseline_bar_chart_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_bar_chart_24.xml
@@ -1,4 +1,5 @@
 <vector android:height="24dp" android:tint="#FFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M4,9h4v11h-4z"
+    <path android:fillColor="@android:color/white" android:pathData="M4,9h4v11h-4z"/>
+    <path android:fillColor="@android:color/white" 
