--- a/app/src/main/res/drawable/ic_baseline_bar_chart_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_bar_chart_24.xml
@@ -4,4 +4,4 @@
     <path android:fillColor="@android:color/white" android:pathData="M4,9h4v11h-4z"/>
     <path android:fillColor="@android:color/white" android:pathData="M16,13h4v7h-4z"/>
     <path android:fillColor="@android:color/white" android:pathData="M10,4h4v16h-4z"/>
-</vector
+</vector>
