--- a/app/src/main/res/drawable/ic_baseline_inventory_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_inventory_24.xml
@@ -1,4 +1,4 @@
 <vector android:height="24dp" android:tint="#FFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:c
+    <path android:fillColor="@android:color/white" android:pathData="M20,2L4,2c-1,0 -2,0.9 -
