--- a/app/src/main/res/drawable/ic_baseline_settings_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_settings_24.xml
@@ -1,1 +1,2 @@
-<vector android:height="24dp" android:tint="#FF
+<vector android:height="24dp" android:tint="#FFFFFF"
+    android:viewportHeight="24" android:viewportWidth="24"
