--- a/app/src/main/res/drawable/ic_baseline_settings_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_settings_24.xml
@@ -1,2 +1,3 @@
 <vector android:height="24dp" android:tint="#FFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://sc
