--- a/app/src/main/res/drawable/ic_baseline_settings_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_settings_24.xml
@@ -1,4 +1,4 @@
 <vector android:height="24dp" android:tint="#FFFFFF"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M19.14,12.94c0.04,-0.3 0.
+    <path android:fillColor="@android:color/white" android:pathData="M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-
