--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -3,4 +3,5 @@
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
-    android:vi
+    android:viewportHeight="108">
+    <path android:pathData="M31,63
