--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -14,4 +14,6 @@
                 android:type="linear">
                 <item
                     android:color="#44000000"
-                    android:off
+                    android:offset="0.0" />
+                <item
+                  
