--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -17,4 +17,6 @@
                     android:offset="0.0" />
                 <item
                     android:color="#00000000"
-                    and
+                    android:offset="1.0" />
+            </gradient>
+        </aapt:
