--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -19,4 +19,7 @@
                     android:color="#00000000"
                     android:offset="1.0" />
             </gradient>
-        </aapt:
+        </aapt:attr>
+    </path>
+    <path
+        android:fillColor="#FFF
