--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -22,4 +22,6 @@
         </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFF
+        android:fillColor="#FFFFFF"
+        android:fillType="nonZero"
+        android
