--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,3 +1,4 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.StockApp" parent="Theme.Mater
+    <style name="Theme.StockApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Prim
