--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.StockApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Prim
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@colo
