--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,4 +2,5 @@
     <!-- Base application theme. -->
     <style name="Theme.StockApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@colo
+        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorP
