--- a/app/src/main/res/xml/backup_rules.xml
+++ b/app/src/main/res/xml/backup_rules.xml
@@ -7,4 +7,5 @@
 -->
 <full-backup-content>
     <!--
-   <include domain="shar
+   <include domain="sharedpref" path="."/>
+   <exclude domain="sharedpref" path
