--- a/app/src/main/res/xml/backup_rules.xml
+++ b/app/src/main/res/xml/backup_rules.xml
@@ -8,4 +8,6 @@
 <full-backup-content>
     <!--
    <include domain="sharedpref" path="."/>
-   <exclude domain="sharedpref" path
+   <exclude domain="sharedpref" path="device.xml"/>
+-->
+</full-backup-content>
