--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -5,4 +5,5 @@
 -->
 <data-extraction-rules>
     <cloud-backup>
-        <!-- TODO: Use <include> and <ex
+        <!-- TODO: Use <include> and <exclude> to control what is backed up.
+        <include .../
