--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -12,4 +12,6 @@
     </cloud-backup>
     <!--
     <device-transfer>
-        <include 
+        <include .../>
+        <exclude .../>
+    </device-t
