--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -14,4 +14,6 @@
     <device-transfer>
         <include .../>
         <exclude .../>
-    </device-t
+    </device-transfer>
+    -->
+</data-extraction-rules
